Fixed spacing inconsistencies

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   }
 
   .fluid-layout {
+    @apply container mx-auto px-4 xl:px-20 mt-12 lg:mt-24;
+  }
+
+  .secondary-fluid-layout {
     @apply container mx-auto px-4 xl:px-20;
   }
 
